Adjust HttpStreamFactoryImpl::JobController UMA logging

The DCHECK is not valid after recent refactoring which makes JobController to
create jobs after proxy resolution (i.e. a JobController can have no pending
Job when it is in proxy resolution.)
UMA data show that having multiple hundreds of JobController is not indicative
of memory leak, so this CL also adjusts the threshold for emitting UMA stats.

Bug: 775253
Cq-Include-Trybots: master.tryserver.chromium.android:android_cronet_tester;master.tryserver.chromium.mac:ios-simulator-cronet
Change-Id: I5f12ee5c16de51a87aaf7dd2aed6840801b5367a
Reviewed-on: https://chromium-review.googlesource.com/743689
Reviewed-by: Zhongyi Shi <zhongyi@chromium.org>
Commit-Queue: Helen Li <xunjieli@chromium.org>
Cr-Commit-Position: refs/heads/master@{#512568}
Former-commit-id: 4771dcb270f5f20f6e7d295454b615c954b81184